[project]
name = "fpsframedrop"
description = "A node to drop frames from the output images to force the video to a lower FPS at the same playback speed."
version = "1.0.0"
license = "MIT" 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/dailydoseofaiart/ComfyUI-FPSFrameDrop"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/dailydoseofaiart/ComfyUI-FPSFrameDrop/wiki"
"Bug Tracker" = "https://github.com/dailydoseofaiart/ComfyUI-FPSFrameDrop/issues"

[tool.comfy]
PublisherId = "dailydoseofaiart"
DisplayName = "ComfyUI-FPSFrameDrop"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

